<resources>
    <string name="app_name">gon</string>

    <string name="facebook_app_id">449911958513964</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">+</string>

    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="events_permissions_header">Import Facebook Events</string>
    <string name="events_permissions_details">Do you want to import upcoming events from Facebook?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="event_add">New Event</string>
    <string name="event_category">Category</string>
    <string name="event_location">Location</string>
    <string name="event_start_date">Start Date</string>
    <string name="event_end_date">End Date</string>
    <string name="event_items">Items</string>
    <string name="recommended_items">Recommended Items</string>
    <string name="action_submit">Submit</string>
    <string name="action_my_events">My Events</string>
</resources>
