<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.gon_htn.gon.AddEventActivity"
    android:id="@+id/root_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_event_form">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/event_add"
                android:background="@color/Carrot"
                android:textColor="@color/White"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:id="@+id/event_name" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_category"
                android:hint="@string/event_category" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_location"
                android:hint="@string/event_location" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/start_date"
                android:hint="@string/event_start_date"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="7dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/end_date"
                android:hint="@string/event_end_date"
                android:textSize="20dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_items"
                android:id="@+id/textView"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Carrot"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_items">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:text="New Button"
                    android:id="@+id/btn_add_user_item"
                    android:visibility="invisible" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_item_1"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recommended_items"></LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_submit"
                android:id="@+id/submit_event"
                android:layout_marginTop="30dp"
                android:textColor="@color/White"
                android:background="@color/DarkGrey"
                android:shadowColor="@color/Carrot"
                android:textStyle="bold"
                android:clickable="true" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
